--- a/crud/frontend/src/components/template/NavItem.css
+++ b/crud/frontend/src/components/template/NavItem.css
@@ -7,5 +7,8 @@ div > a {
 }
 
 div > a:hover{
-    background-color: linear-gradient(135deg, #07a7e3 0%, #32dac3 100%);
+    
+    background: linear-gradient(135deg, #07a7e3 0%, #32dac3 100%);
+    text-decoration: none;
 }
+
