--- a/crud/frontend/src/components/template/Nav.css
+++ b/crud/frontend/src/components/template/Nav.css
@@ -5,3 +5,20 @@ aside.menu-area{
     2px 0 15px 0 rgba(0,0,0,0.09);
 }
 
+@media(max-width: 768px) {
+    .menu {
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+    }
+
+    .menu a{
+        display: inline;
+        padding: 10px;
+        margin: 0;
+    }
+    .menu{
+        height: 100%;
+        justify-content: space-around;
+    }
+}
