--- a/crud/frontend/src/main/App.css
+++ b/crud/frontend/src/main/App.css
@@ -1,56 +1,87 @@
 :root {
-    --bg-dark: #1A2F3A;
+  --bg-dark: #1a2f3a;
 
-    --logo-height: 105px;
-    --header-height: 105px;
-    --menu-top-height: 70px;
-    --aside-width: 200px;
-    --footer-height: 40px;
+  --logo-height: 105px;
+  --header-height: 105px;
+  --menu-top-height: 70px;
+  --aside-width: 200px;
+  --footer-height: 40px;
 
-    --shadow: 
-        0 2px 23px 0 rgba(0, 0, 0, 0.1),
-        0 2px 49px 0 rgba(0, 0, 0, 0.06);
+  --shadow: 0 2px 23px 0 rgba(0, 0, 0, 0.1), 0 2px 49px 0 rgba(0, 0, 0, 0.06);
 }
 
 * {
-    box-sizing: border-box;
-    font-family: 'Montserrat', sans-serif;
+  box-sizing: border-box;
+  font-family: "Montserrat", sans-serif;
 }
 
 /* Layout em Grid */
 
 .app {
-    margin: 0px;
-    display: grid;
-    grid-template-columns: var(--aside-width) 1fr;
-    grid-template-rows:
-        var(--header-height)
-        1fr
-        var(--footer-height);
-    grid-template-areas:
-        "logo header"
-        "menu content"
-        "menu footer";
-    height: 100vh;
-    background-color: #F5F5F5;
+  margin: 0px;
+  display: grid;
+  grid-template-columns: var(--aside-width) 1fr;
+  grid-template-rows:
+    var(--header-height)
+    1fr
+    var(--footer-height);
+  grid-template-areas:
+    "logo header"
+    "menu content"
+    "menu footer";
+  height: 100vh;
+  background-color: #f5f5f5;
 }
 
 aside.logo {
-    grid-area: logo;
+  grid-area: logo;
 }
 
 header.header {
-    grid-area: header;
+  grid-area: header;
 }
 
 aside.menu-area {
-    grid-area: menu;
+  grid-area: menu;
 }
 
 main.content {
-    grid-area: content;
+  grid-area: content;
 }
 
 footer.footer {
-    grid-area: footer;
+  grid-area: footer;
+}
+
+@media (max-width: 768px) {
+  .app {
+    grid-template-rows:
+      var(--header-height)
+      var(--menu-top-height)
+      1fr
+      var(--footer-height);
+    grid-template-columns: var(--aside-width) 1fr;
+    grid-template-areas:
+      "logo header"
+      "menu menu"
+      "content content"
+      "footer footer";
+  }
+}
+
+@media (max-width: 576px) {
+  .app {
+    grid-template-rows:
+      var(--logo-height)
+      var(--menu-top-height)
+      1fr
+      var(--footer-height);
+
+    grid-template-columns: 1fr;
+    grid-template-areas:
+      "logo"
+      "menu"
+      "content"
+      "footer";
+  }
 }
